package info.jab.churrera.workflow;

import info.jab.churrera.util.PropertyResolver;
import org.xml.sax.SAXException;

import javax.xml.XMLConstants;
import javax.xml.transform.stream.StreamSource;
import javax.xml.validation.Schema;
import javax.xml.validation.SchemaFactory;
import javax.xml.validation.Validator;
import java.io.File;
import java.io.IOException;
import java.nio.file.Path;
import java.util.ArrayList;
import java.util.List;

/**
 * Service for validating workflow XML files against the XSD schema.
 * Only supports v2 (pml-workflow.xsd) schema.
 */
public class WorkflowValidator {

    private static final String SCHEMA_URL_PROPERTY = "workflow.schema.url";
    private final PropertyResolver propertyResolver;

    public WorkflowValidator() {
        this.propertyResolver = new PropertyResolver();
    }

    /**
     * Validates a workflow XML file against the XSD schema.
     *
     * @param workflowFile the workflow XML file to validate
     * @return ValidationResult containing validation status and any error messages
     */
    public ValidationResult validate(File workflowFile) {
        List<String> errors = new ArrayList<>();

        try {
            // Load the XSD schema from resources
            Schema schema = loadSchema();

            // Create validator
            Validator validator = schema.newValidator();

            // Create custom error handler to collect validation errors
            ValidationErrorHandler errorHandler = new ValidationErrorHandler();
            validator.setErrorHandler(errorHandler);

            // Validate the XML file
            validator.validate(new StreamSource(workflowFile));

            // Check if there were any validation errors
            if (errorHandler.hasErrors()) {
                errors.addAll(errorHandler.getErrors());
            }

        } catch (SAXException e) {
            errors.add("XML parsing error: " + e.getMessage());
        } catch (IOException e) {
            errors.add("File I/O error: " + e.getMessage());
        } catch (Exception e) {
            errors.add("Unexpected error during validation: " + e.getMessage());
        }

        return new ValidationResult(errors.isEmpty(), errors);
    }

    /**
     * Validates a workflow XML file against the XSD schema using a file path.
     *
     * @param workflowPath the path to the workflow XML file
     * @return ValidationResult containing validation status and any error messages
     */
    public ValidationResult validate(Path workflowPath) {
        return validate(workflowPath.toFile());
    }

    /**
     * Loads the XSD schema from the external URL.
     *
     * @return the loaded Schema object
     * @throws SAXException if there's an error parsing the schema
     * @throws IOException if there's an error reading the schema file
     */
    private Schema loadSchema() throws SAXException, IOException {
        SchemaFactory factory = SchemaFactory.newInstance(XMLConstants.W3C_XML_SCHEMA_NS_URI);
        String schemaUrl = getSchemaUrl();
        return factory.newSchema(new java.net.URL(schemaUrl));
    }

    /**
     * Gets the schema URL from properties.
     *
     * @return the schema URL to use for validation
     * @throws IllegalStateException if the schema URL property is not configured
     */
    private String getSchemaUrl() {
        return propertyResolver.getProperty("application.properties", SCHEMA_URL_PROPERTY)
                .orElseThrow(() -> new IllegalStateException("Schema URL not configured. Please set property: " + SCHEMA_URL_PROPERTY));
    }

    /**
     * Result of workflow validation containing status and error messages.
     */
    public static class ValidationResult {
        private final boolean valid;
        private final List<String> errors;

        public ValidationResult(boolean valid, List<String> errors) {
            this.valid = valid;
            this.errors = new ArrayList<>(errors);
        }

        /**
         * Returns true if the workflow XML is valid according to the schema.
         *
         * @return true if valid, false otherwise
         */
        public boolean isValid() {
            return valid;
        }

        /**
         * Returns the list of validation error messages.
         *
         * @return list of error messages (empty if valid)
         */
        public List<String> getErrors() {
            return new ArrayList<>(errors);
        }

        /**
         * Returns a formatted string containing all error messages.
         *
         * @return formatted error string
         */
        public String getFormattedErrors() {
            if (errors.isEmpty()) {
                return "No validation errors.";
            }

            StringBuilder sb = new StringBuilder("Validation errors:\n");
            for (int i = 0; i < errors.size(); i++) {
                sb.append("  ").append(i + 1).append(". ").append(errors.get(i)).append("\n");
            }
            return sb.toString();
        }
    }

    /**
     * Custom error handler to collect validation errors.
     */
    private static class ValidationErrorHandler implements org.xml.sax.ErrorHandler {
        private final List<String> errors = new ArrayList<>();

        @Override
        public void warning(org.xml.sax.SAXParseException exception) {
            errors.add("Warning: " + exception.getMessage() + " at line " + exception.getLineNumber());
        }

        @Override
        public void error(org.xml.sax.SAXParseException exception) {
            errors.add("Error: " + exception.getMessage() + " at line " + exception.getLineNumber());
        }

        @Override
        public void fatalError(org.xml.sax.SAXParseException exception) {
            errors.add("Fatal Error: " + exception.getMessage() + " at line " + exception.getLineNumber());
        }

        public boolean hasErrors() {
            return !errors.isEmpty();
        }

        public List<String> getErrors() {
            return new ArrayList<>(errors);
        }
    }
}

